--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 										</h4>
 										<h5>Tel Aviv, Israel</h5>
 										<p class="description">
-											Current studing Automation - including java, html, css etc. 
+											Currently studying Automation - including java, html, css etc. 
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
