--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> i am <br> shirly <br> shirgaonker <span>.</span>   </h2>
 							<p>quality assurance engineer</p>
-							<a href="assets/download/Shirly Shirgaonker - Resume.pdf" target="_blank" download>download resume</a>
+							<a href="assets/download/Shirly Shirgaonker - Resume 2025.pdf" target="_blank" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
